Fix overflow :cow: on rewards page

--- a/_sass/_reward.scss
+++ b/_sass/_reward.scss
@@ -9,3 +9,6 @@ img.bitcoin-address {
 code.bitcoin-address {
   text-align: center;
 }
+code {
+  overflow: auto;
+}
